# Parabox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: parabox.h
include/agents/: base_agent.h  inner_map_agent.h  recursion_agent.h
include/canvas/: canvas.h  color_print.h
include/keyboard/: keyboard_control.h
include/manager/: map_manager.h  object_manager.h
include/maps/: base_map.h  direction.h
include/maps/inner_map_maps/: all_inner_map_maps.h  base_inner_map_map.h  inner_map_map1.h
include/maps/recursion_maps/: all_recursion_maps.h  (+2 more)
include/objects/: base_object.h  block_object.h  map_object.h  object_types.h  player_object.h  recursion_object.h  void_object.h  wall_object.h
include/utils/: direction.h  map_id.h  map_types.h  types.h
src/: CMakeLists.txt  parabox.cpp
src/agents/: CMakeLists.txt  base_agent.cpp  inner_map_agent.cpp  recursion_agent.cpp
src/canvas/: CMakeLists.txt  canvas.cpp
src/keyboard/: CMakeLists.txt  keyboard_control.cpp
src/manager/: CMakeLists.txt  map_manager.cpp  object_manager.cpp
src/maps/: CMakeLists.txt  base_map.cpp
src/maps/inner_map_maps/: CMakeLists.txt  base_inner_map_map.cpp  inner_map_map1.cpp
src/maps/recursion_maps/: CMakeLists.txt  base_recursion_map.cpp  recursion_map1.cpp
src/maps/static_maps/: CMakeLists.txt  base_static_map.cpp  static_map_1.cpp  static_map_2.cpp
src/objects/: CMakeLists.txt  base_object.cpp  block_object.cpp  map_object.cpp  player_object.cpp  recursion_object.cpp  void_object.cpp  wall_object.cpp
src/utils/: CMakeLists.txt  utils.cpp
(+4 files in other folders)
